--- a/index.html
+++ b/index.html
@@ -32,31 +32,30 @@
           <p>Get your life insurance coverage easier and faster. We blend our expertise<br> and technology to help you find
             the plan that's right for you. Ensure you<br> and your loved ones are protected. </p>
           <button>VIEW PLANS</button>
-      
         </div>
         <div class="family">
-          <img src="images/family.jpg">
+          <img src="images/family.jpg" >
         </div>
       </div>
     </div>
     <div class="second-card">
       <div class="line-2"><hr></div>
-      <div>
+      <div class="diff">
         <h1>We're different</h1>
       </div>
       <div class="card2">
-        <div>
+        <div class="card21">
           <i class="fa-solid fa-bolt"></i>
           <h3>Snappy Process</h3>
           <p>Our application process can be completed in<br>minutes ,not hours. Don't get stuck filling in<br>tedious forms.</p>
         </div>
-        <div>
+        <div class="card21">
           <i class="fa-solid fa-dollar-sign"></i>
           <h3>Affordable Prices</h3>
           <p>We don't want you worrying about high monthly<br>costs. Our prices may be low, but we still offer<br> the best
             coverage possible. </p>
         </div>
-        <div>
+        <div class="card21">
           <i class="fa-solid fa-user"></i>
           <h3>People First</h3>
           <p>Our plans aren't full of conditions and clauses<br>to prevent payouts. We make sure you're<br>covered when you need
@@ -84,7 +83,7 @@
       <hr>
       <div class="last-last">
         <div class="card1">
-          <h3>OUR COUNTRY</h3>
+          <h3>OUR COMPANY</h3>
           <div>
             <p>HOW WE WORK</p>
             <p>WHY INSURE</p>
@@ -92,7 +91,7 @@
             <p>REVIEWS</p>
           </div>
         </div>
-        <div>
+        <div class="card1">
           <h3>HELP ME</h3>
           <div>
             <p>HELP ME</p>
@@ -101,7 +100,7 @@
             <p>COOKIES</p>
           </div>
         </div>
-        <div>
+        <div class="card1">
           <h3>CONTACT</h3>
           <div>
             <p>SALES</p>
@@ -110,7 +109,7 @@
             
           </div>
         </div>
-        <div>
+        <div class="card1">
           <h3>OTHERS</h3>
           <div>
             <p>CAREERS</p>
